[Checkphone] output count

--- a/templates/doc/index.html.twig
+++ b/templates/doc/index.html.twig
@@ -299,18 +299,18 @@
                             <div class="accordion-body">
 
                                 <div class="card">
-                                    <div class="card-header">
-                                        <div class="input-group flex-nowrap">
-                                            <span class="input-group-text" id="addon-wrapping">Номер телефона</span>
-                                            <input id="checkphone_setphone_phone" type="text" class="form-control" placeholder="phone" aria-label="phone" aria-describedby="addon-wrapping">
-                                        </div>
-                                        <div class="input-group flex-nowrap">
-                                            <span class="input-group-text" id="addon-wrapping">Ид устройства</span>
-                                            <input id="checkphone_setphone_id_dev" type="text" class="form-control" placeholder="id_dev" aria-label="id_dev" aria-describedby="addon-wrapping">
-                                        </div>
-                                    </div>
+{#                                    <div class="card-header">#}
+{#                                        <div class="input-group flex-nowrap">#}
+{#                                            <span class="input-group-text" id="addon-wrapping">Номер телефона</span>#}
+{#                                            <input id="checkphone_setphone_phone" type="text" class="form-control" placeholder="phone" aria-label="phone" aria-describedby="addon-wrapping">#}
+{#                                        </div>#}
+{#                                        <div class="input-group flex-nowrap">#}
+{#                                            <span class="input-group-text" id="addon-wrapping">Ид устройства</span>#}
+{#                                            <input id="checkphone_setphone_id_dev" type="text" class="form-control" placeholder="id_dev" aria-label="id_dev" aria-describedby="addon-wrapping">#}
+{#                                        </div>#}
+{#                                    </div>#}
                                     <div class="card-body">
-                                        <button id="checkphone_setphone" class="btn btn-primary listener_api_request">Запросить</button>
+{#                                        <button id="checkphone_setphone" class="btn btn-primary listener_api_request">Запросить</button>#}
                                         <button id="checkphone_setphone_loader" class="btn btn-primary hiddenclass" type="button" disabled>
                                             <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                                             Ожидайте
