--- a/templates/doc/index.html.twig
+++ b/templates/doc/index.html.twig
@@ -292,7 +292,7 @@
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-checkphoneCheckQuery">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse-checkphoneCheckQuery" aria-expanded="false" aria-controls="flush-collapse-checkphoneCheckQuery">
-                                Запросы за сегодня
+                                Запросы за сегодня ({{ listClient|length }})
                             </button>
                         </h2>
                         <div id="flush-collapse-checkphoneCheckQuery" class="accordion-collapse collapse" aria-labelledby="flush-checkphoneCheckQuery" data-bs-parent="#accordionFlushCheckphone">
