[Checkphone] add Images

--- a/templates/doc/index.html.twig
+++ b/templates/doc/index.html.twig
@@ -202,6 +202,8 @@
                                     <li><i>viber</i> - вайбер</li>
                                     <li><i>ok</i> - одноклассники</li>
                                     <li><i>adress</i> - адрес</li>
+                                    <li><i>lastQuery</i> - последний запрос</li>
+                                    <li><i>images</i> - изображения</li>
                                 </ul>
                                 <div class="card">
                                     <div class="card-header">
@@ -261,6 +263,8 @@
                                     <li><i>viber</i> - вайбер</li>
                                     <li><i>ok</i> - одноклассники</li>
                                     <li><i>adress</i> - адрес</li>
+                                    <li><i>lastQuery</i> - последний запрос</li>
+                                    <li><i>images</i> - изображения</li>
                                 </ul>
                                 <div class="card">
                                     <div class="card-header">
